--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ locale: "en-US"
 title: Portfolio
 #title_separator: "-"
 #subtitle: Madison Jordan # site tagline that appears below site title in masthead
+name: "Madison Jordan"
 #email:
 description: >- # this means to ignore newlines until "baseurl:"
   Portfolio for Madison Jordan
@@ -26,8 +27,12 @@ description: >- # this means to ignore newlines until "baseurl:"
 github_username: madisonjordan
 minimal_mistakes_skin: "contrast" #"default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 search: true
-url: "https://madisonjordan.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl: "/portfolio" # the subpath of your site, e.g. "/blog"
+repository: madisonjordan/website # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+url: "https://madisonjordan.github.io"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl: "/website" # the subpath of your site, e.g. "/blog"
+teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+logo: # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+masthead_title: # overrides the website title displayed in the masthead, use " " for no title
 
 
 name: "Madison Jordan"
