--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ minimal_mistakes_skin: "contrast" #"default" # "air", "aqua", "contrast", "dark"
 search: true
 repository: madisonjordan/website # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 url: "https://madisonjordan.github.io"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl: "/website" # the subpath of your site, e.g. "/blog"
+#baseurl: "/website" # the subpath of your site, e.g. "/blog"
 
 name: "Madison Jordan"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
